kubernetes/201/05.example-voting-app-chart/templates/vote-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vote
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - image: example-voting-app_vote
        imagePullPolicy: IfNotPresent
        name: vote
