kubernetes/201/05.example-voting-app-chart/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: example-voting-app
spec:
  rules:
  - host: example-voting-app-vote.192.168.99.100.xip.io
    http:
      paths:
      - backend:
          serviceName: vote
          servicePort: 80
  - host: example-voting-app-result.192.168.99.100.xip.io
    http:
      paths:
      - backend:
          serviceName: result
          servicePort: 80
